--- a/K8-install-Playbooks/k8install.yml
+++ b/K8-install-Playbooks/k8install.yml
@@ -33,6 +33,13 @@
         enabled: true
         name: kubelet
         state: started
+    -
+      name: "Hold Packages"
+      command: apt-mark hold kubeadm kubelet kubectl
+
+    -
+      command: "hostnamectl set-hostname master-node"
+      name: "Setting name"
 - 
   become: true
   hosts: all
