--- a/K8-install-Playbooks/k8work.yml
+++ b/K8-install-Playbooks/k8work.yml
@@ -1,30 +1,24 @@
---- 
-- 
-  become: true
+- hosts: master
+  become: yes
   gather_facts: false
-  hosts: master
-  name: "Provisioning Worker node"
-  tasks: 
-    - 
-      name: "get join command"
+  tasks:
+    - name: get join command
+      shell: kubeadm token create --print-join-command
       register: join_command_raw
-      shell: "kubeadm token create --print-join-command"
-    - 
-      name: "set join command"
-      set_fact: 
+
+    - name: set join command
+      set_fact:
         join_command: "{{ join_command_raw.stdout_lines[0] }}"
-- 
-  become: true
-  hosts: worker
-  name: "Joining worker nodes"
-  tasks: 
-    - 
-      args: 
+
+
+- hosts: worker
+  become: yes
+  tasks:
+    - name: join cluster
+      shell: "{{ hostvars['18.219.125.65'].join_command }} --ignore-preflight-errors all  >> node_joined.txt"
+      args:
         chdir: $HOME
         creates: node_joined.txt
-      name: "join cluster"
-      shell: "{{ hostvars['18.224.190.230'].join_command }} --ignore-preflight-errors all  >> node_joined.txt"
-
     -
       name: Setting name
       shell: hostnamectl set-hostname worker
