--- a/ansible-pb/playbook.yml
+++ b/ansible-pb/playbook.yml
@@ -12,10 +12,10 @@
       apt_repository: "repo='deb https://pkg.jenkins.io/debian-stable binary/' state=present"
       name: "download jenkins.repo"
     -
-      apt: "name={{item}} update_cache=yes state=latest"
+      apt: "name={{item}} update_cache=yes state=present"
       name: "Install Java"
       with_items:
-        - openjdk-8-jre-headless
+        - openjdk-8-jdk
         - docker.io
         - jenkins
         - maven
